# gfx_garden

./: .gitignore  .gitmodules  CMakeLists.txt  build.sh  raylib_intro.md  readme.md  roadmap.md  test  test.cpp  window.cpp  window.h  wt.cpp
.github/workflows/: c-cpp.yml
cpp/: test20.cpp  week1.cpp
cpp/c++11/: test.cpp
cpp/c++17/: test.cpp  trw
cpp/webgpu_vanguard/: CMakeLists.txt  main.cpp
d1/: a1.cpp  a2.cpp
d2/: a3  a3.cpp
d4/hw/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
g0/: .gitignore  g01.cpp  nota.md
g1/: nota.md
gpu vanguard/: roadmap.md
notes/udacity_3d_graphics/: interactive_3d_graphics.md
opengl/include/glad/: glad.h
opengl/src/: glad.c
src/: notes.md
src/getting_started/: g01.cpp
sync/.obsidian/: daily-notes.json  workspace-mobile.json  workspace-mobile.sync-conflict-20260211-172108-KTKXSAD.json
sync/.stfolder/: syncthing-folder-7df2f1.txt
sync/diarios/: 2026-02-11.md
sync/diarios/.obsidian/: community-plugins.json  core-plugins.json  daily-notes.json  workspace-mobile.json
sync/diarios/.obsidian/plugins/password-protection/: main.js  manifest.json
sync/kreative_rum/.obsidian/: app.json  app.sync-conflict-20260316-211944-7LHKI2Q.json  community-plugins.json  core-plugins.json  graph.json  workspace-mobile.json  workspace-mobile.sync-conflict-20260302-133630-KTKXSAD.json  workspace-mobile.sync-conflict-20260316-211942-7LHKI2Q.json  workspace.json
sync/kreative_rum/.obsidian/plugins/home-tab/: data.json  data.sync-conflict-20260302-190631-KTKXSAD.json  data.sync-conflict-20260316-211944-7LHKI2Q.json
sync/kreative_rum/Computers/C++/: Footnotes.md
sync/kreative_rum/Computers/Computer Architecture/: Digital design and computer architecture.md
sync/kreative_rum/Computers/Game Dev diaries/Portfolio/: Ideas.canvas  Isometric gamedev.md  Portfolio upgrade.md
sync/kreative_rum/Computers/Game Dev diaries/Procreate/: Procreate 2d walkthrough.md
sync/kreative_rum/Computers/Graphics Programming/: Interactive 3D Graphics.md  notas.md
sync/kreative_rum/Computers/Graphics Programming/.obsidian/: appearance.json
sync/kreative_rum/Computers/Graphics Programming/OpenGL/: OpenGL.md
sync/kreative_rum/Computers/Graphics Programming/TInyrenderer/: tinyrenderer.md
sync/kreative_rum/Meesa/: Current Focus.md  GSDE Timeline 😊.md
trw/: CMakeLists.txt  main.cpp  tgaimage.cpp  tgaimage.h  trw
u0/: unity01.md
u0/shaderlab0/: .gitignore
u0/shaderlab0/Assets/: HandIndicator.mat  HourIndicator.mat
u0/shaderlab0/Assets/Scenes/: SampleScene.unity
u0/shaderlab0/Assets/Settings/: UniversalRenderPipelineGlobalSettings.asset
u0/shaderlab0/ProjectSettings/: ProjectSettings.asset
w1/: window.cpp
webgpu_vanguard/: CMakeLists.txt  main.cpp
